--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,16 @@ author:
   name:           'STARSEED'
   url:            
 
+jekyll-archives:
+  enabled: []
+  layout: 'archive'
+  permalinks:
+    year: '/:year/'
+    month: '/:year/:month/'
+    day: '/:year/:month/:day/'
+    tag: '/tag/:name/'
+    category: '/category/:name/'
+
 paginate:         6
 
 # Custom vars
