--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            'THE AESTHETIC'
+title:            'the aesthetic'
 tagline:          'Streetwear Reviews'
 description:      'Perspectives on streetwear aesthetics and symbolism'
 url:              http://musingsofastarseed.tk
