--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,10 @@ author:
   name:           ''
   url:            
 
+pages_list:       
+  About: '/about'
+  Archive: '/archive'
+  Feed: '/atom.xml'
 
 paginate:         6
 
