--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            'the aesthetic'
-tagline:          'Streetwear Reviews'
-description:      'Perspectives on streetwear aesthetics and symbolism'
+title:            'light vibes'
+tagline:          'Aum.svg'
+description:      'Aum.svg'
 url:              http://musingsofastarseed.tk
 baseurl:          /
 
