--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            'light vibes'
-tagline:          'Aum.svg'
-description:      'Aum.svg'
+title:            'be light'
+tagline:          'om'
+description:      'light musings'
 url:              http://musingsofastarseed.tk
 baseurl:          /
 
