--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ relative_permalinks: true
 title:            'being lightly'
 tagline:          'om'
 description:      'a collection of light musings'
-url:              http://musingsofastarseed.tk
+url:              beinglightly.co
 baseurl:          /
 
 author:
