--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ relative_permalinks: true
 # Setup
 title:            'being lightly'
 tagline:          'om'
-description:      'a collection of light musings'
+description:      'Reminders that being is wonderfully simple'
 url:              beinglightly.co
 baseurl:          /
 
